# safeT-PTT

./: .gitmodules  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: bridge-console-build.yml  bridge-console-pr.yml  ios-testflight.yml  ios.yml  sdr-desktop-release.yml  server-pr.yml
android-app/: .gitignore  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/cpp/: CMakeLists.txt  codec2_jni.cpp  opus_jni.cpp  p25_jni.cpp
android-app/app/src/main/cpp/dvmvocoder/: README.txt
android-app/app/src/main/cpp/dvmvocoder/vocoder/: AMBEFEC.cpp  AMBEFEC.h  CMakeLists.txt  Golay24128.cpp  Golay24128.h  Hamming.cpp  Hamming.h  MBEDecoder.cpp  MBEDecoder.h  MBEEncoder.cpp  MBEEncoder.h  Utils.cpp  Utils.h  ambe3600x2250.c  ambe3600x2400.c  ambe3600x2450.c  ecc.c  imbe7200x4400.c  mbe.c
android-app/app/src/main/cpp/dvmvocoder/vocoder/imbe/: aux_sub.cpp  basic_op.cpp  ch_decode.cpp  ch_decode.h  ch_encode.cpp  dc_rmv.cpp  decode.cpp  dsp_sub.cpp  encode.cpp  imbe.h  imbe_vocoder.cpp  imbe_vocoder.h  math_sub.cpp  pe_lpf.cpp  pitch_est.cpp  pitch_ref.cpp  qnt_sub.cpp  rand_gen.cpp  sa_decode.cpp  sa_encode.cpp  sa_enh.cpp  tbls.cpp  uv_synt.cpp  v_synt.cpp  v_uv_det.cpp
bridge-console/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
bridge-console/electron/: main.js  preload.js
bridge-console/renderer/: index.html
bridge-console/renderer/src/: api.ts  bridgeRunner.ts  format.ts  host.ts  main.ts  styles.css  types.ts  ui.ts
ci_scripts/: ci_post_clone.sh
desktop-console/: package-lock.json  package.json
desktop-console/electron/: fallback.html  main.js  preload.js
docs/: ai-dispatch-wake-word-on-device.md  ambe-p25p2-pilot.md  android-ota.md  custom-radio-sounds.md  integrations-and-ai-dispatch.md  ios-xcode-after-pull.md  product-backlog.md  product-updates-page.md  railway-android-setup.md  ssa-shift-integration.md  troubleshooting-transcription-and-ai.md  voice-opus-fec-plan.md  voice-quality-jitter.md  voice-timing.md
docs/ten8/: README.md  cad-api-1.0.8.json  incident-export-webhook-1.0.0.json  new-incident-api-1.0.0.json
ios-app/: .gitignore  Local.example.xcconfig  README.md  project.yml  setup.sh
ios-app/SafeTMobile/: SafeTMobile-Bridging-Header.h  SafeTMobileApp.swift
ios-app/SafeTMobile/Audio/: AmbeVoiceCodec.swift  AudioSessionManager.swift  Codec2VoiceCodec.swift  ImbeTxConditioner.swift  InboundJitterBuffer.swift  InboundVoiceDecoder.swift  OpusVoiceCodec.swift  P25AmbeNative.swift  PostDecodeChain.swift  (+8 more)
ios-app/SafeTMobileLiveActivity/: RadioLiveActivity.swift  RadioWidget.swift  SafeTMobileLiveActivity.entitlements  SafeTMobileLiveActivityBundle.swift
ios-app/SafeTMobileTests/: ImbeTxConditionerTests.swift  LocationReportTests.swift  OpusVoiceCodecTests.swift  P25ImbeFramesTests.swift  RadioApiClientTests.swift  SettingsStoreTests.swift  VoiceTransportSessionGatingTests.swift
ios-app/SafeTMobileUITests/: PttControlsRegressionUITests.swift  RadioScreenUITests.swift
ios-app/ci_scripts/: ci_post_clone.sh
scripts/: export-ssa-properties.mjs
sdr-bridge/: .gitignore  CCCS-MULTISITE.md  README.md  SDRTRUNK.md  WINDOWS.md  docker-compose.yml  package.json
sdr-bridge/config/: occcs-talkgroups.csv  system.example.json  talkgroups.example.csv
sdr-bridge/desktop/: Build SafeT SDR.cmd  README.md  electron-builder.yml  package.json
sdr-bridge/scripts/: cc-watchdog.mjs  cc-watchdog.test.mjs  generate.mjs  import-bridges.mjs  install-sdrtrunk-restart-task.ps1  local-bridge.mjs  migrate-config.mjs  restart-sdrtrunk.ps1  run-all.sh  sdrtrunk-bridge.mjs  sdrtrunk-harden-channels.mjs  sdrtrunk-harden-channels.test.mjs  sdrtrunk-playlist.mjs  sdrtrunk-playlist.test.mjs  sync-from-safet.mjs  udp-pcm.py
sdr-bridge/tests/: build.test.mjs
sdr-bridge/trunk-recorder/: config.template.json
sdr-bridge/windows/: Build EXE.cmd  Build-Exe.ps1  README.md  Setup SafeT SDR.cmd  Setup-SafeT-SDR.ps1  Start SafeT SDR.cmd  Start-SafeT-SDR.ps1
server/: .gitignore  eslint.config.js  package-lock.json  package.json
server/legal/: EULA.md  LEGAL_RISK_REVIEW.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
server/scripts/: capture-marketing-screenshots.mjs  copy-server-assets.mjs
server/src/: ambeServerCodec.ts  analytics.ts  apiRoutes.ts  appUpdate.ts  audioConfig.ts  audioConfigDerive.ts  audioConfigDevice.ts  audioLabPresets.ts  auth.ts  bridgeWorker.ts  clientType.ts  codec2ServerCodec.ts  dataRetention.ts  db.ts  defaultChannels.ts  emergencyLifecycle.ts  imbeAgc.ts  imbeServerCodec.ts  index.ts  loginRateLimit.ts  opusServerCodec.ts  presence.ts  recorder.ts  sessionCache.ts  store.ts  transcribe.ts  transcribeWorker.ts  voiceCodecs.ts  voiceLinkTelemetryStore.ts  voiceRelay.ts  wav.ts
server/tests/: ambeServerCodec.test.ts  analyticsRange.test.ts  apiRoutes.import.test.ts  apiRoutes.smoke.test.ts  apiRoutes.test.ts  appUpdate.test.ts  audioConfig.test.ts  audioConfigDerive.test.ts  audioConfigDevice.test.ts  audioLabPresets.test.ts  auth.test.ts  billingConfig.test.ts  billingRoutes.test.ts  billingSubscription.test.ts  billingWebhook.test.ts  billingWebhooks.test.ts  bridgeIngestError.test.ts  clientType.test.ts  codec2ServerCodec.test.ts  dataRetention.test.ts  emergencyLifecycle.test.ts  imbeAgc.test.ts  loginRateLimit.test.ts  opusServerCodec.test.ts  postDecodeCompressor.test.ts  presence.test.ts  recorderOpus.test.ts  sessionCache.test.ts  shiftAssignment.test.ts  userTemplateRoutes.test.ts  voiceCodecs.test.ts  voiceLinkTelemetry.test.ts  voiceRelay.test.ts  voiceRelayAir.test.ts  voiceRelayMoveLock.test.ts  voiceRelaySimulcastRefresh.test.ts  wav.test.ts
server/vocoder/: codec2Module.d.mts  codec2Module.mjs  imbeModule.d.mts  imbeModule.mjs  opusModule.d.mts  opusModule.mjs
server/web-console/: eslint.config.js  index.html  package-lock.json  package.json
web-console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-console/public/: pcm-capture-worklet.js
web-console/src/: App.tsx  api.ts  auth.tsx  main.tsx  styles.css
(+397 files in other folders)
